# FERS_core

./: .gitignore  .pre-commit-config.yaml  002_cantilever_with_intermediate_load.json  003_Cantilever_with_Uniform_Distributed_Load.json  101_visual_cantilever_with_end_load.json  1_cantilever_with_end_load.json  CHANGELOG.md  LICENSE  README.md  cantilever_with_intermediate_load.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_triangular.py  tree.txt
.claude/: settings.local.json
.github/workflows/: release.yml
examples/: 11_double_cantilever.py  1_Cantilever_with_End_Load.py  21_two_bar_truss copy.py  22_two_bar_truss_with_visual.py  91_visual_cantilever_with_end_load.py  xx_cross_check_with_pynite.py  xx_cross_check_with_pynite_transformation.py
fers_core/: __init__.py  analysis_settings.py  builders.py  run_examples.py  unity_checks.py
fers_core/cloud/: __init__.py  client.py
fers_core/entities/: __init__.py  entitygroup.py
fers_core/examples/: 001_Cantilever_with_End_Load.py  002_Cantilever_with_Intermediate_Load.py  (+85 more)
json_input_solver/: 011_Simply_Supported_with_Center_Load.json  041_Rigid_member.json  091_Loadcombinations_cantilever.json  131_StiffnessCurve_Cantilever.json  911_double_cantilever.json
scripts/: export_sections.py
tests/: common_functions.py  conftest.py  run_examples.py
wheels/: fers_calculations-0.1.0-cp310-cp310-manylinux_2_34_aarch64.whl  fers_calculations-0.1.0-cp312-cp312-macosx_10_12_x86_64.whl  fers_calculations-0.1.0-cp312-cp312-macosx_11_0_arm64.whl  fers_calculations-0.1.0-cp312-cp312-manylinux_2_34_x86_64.whl  fers_calculations-0.1.0-cp312-cp312-win_amd64.whl  fers_calculations-0.1.0-cp312-none-win_amd64.whl  fers_calculations-0.1.0-py3-none-win_amd64.whl
(+176 files in other folders)
